@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-16-20
+DATE: 04/14/2021
+STAFF: sc
+WTS2-497 new report weekly/VOC_DODups.sql 
+
 TAG: qcreports_db-6-0-16-19
 DATE: 04/13/2021
 STAFF: dbm
